Change log for duff
===================

Maintained since version 0.3.1.

2012-01-28  Camilla Berglund  <elmindreda@elmindreda.org>

 * duffdriver.c dufffile.c duffutil.c: Put non-static functions on top.
 * duffdriver.c (process_clusters): Initialized cluster index.
 * duffdriver.c (report_cluster): Made use of get_field_terminator.
 * duffutil.c (read_path): Made use of get_field_terminator.
 * duffutil.c (get_field_terminator): Added function.
 * duffutil.c (read_path): Removed limit on path length, updated signature.

2012-01-27  Camilla Berglund  <elmindreda@elmindreda.org>

 * dufffile.c (compare_entry_contents): Made warnings take -q into account.
 * dufffile.c (get_file_sample): Tagged file INVALID on read error.
 * dufffile.c (compare_file_digests): Replaced for-loop with memcmp.
 * dufffile.c (get_file_sample, get_file_digest): Replaced pointer checks with
 status checks.
 * duff.h (Status): Added SAMPLED and HASHED values.
 * duffdriver.c (process_clusters): Added test for whether base item has entered
 INVALID state.
 * dufffile.c (get_file_sample, get_file_digest): Removed duplicate check for
 INVALID state.

2012-01-25  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.h (Status): Removed unused DUPLICATE status.
 * duffdriver.c (process_file): Removed read permission check on files (credits
 to Kamal Mostafa).

2012-01-24  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.h (HASH_BITS): Increased to 10.
 * duffdriver.c (print_terminator): Added function.
 * duff.h duffdriver.c dufffile.c (file_list_*): Renamed from entry_list_*.
 * duff.h duffdriver.c dufffile.c (free_file): Renamed from free_entry.
 * duff.h duffdriver.c dufffile.c (init_file): Renamed from fill_entry.
 * duff.h duffdriver.c dufffile.c duffutil.c (FileList): Renamed from EntryList.
 * duff.h duffdriver.c dufffile.c duffutil.c (File): Renamed from Entry.
 * dufffile.c: Renamed from duffentry.c.
 * duffdriver.c (has_recorded_directory): Renamed from has_recursed_directory.