@@ -5,6 +5,10 @@ Maintained since version 0.3.1.
 
 2012-01-28  Camilla Berglund  <elmindreda@elmindreda.org>
 
+ * duff.h dufffile.c (init_file_list): Renamed from file_list_init.
+ * duff.h dufffile.c (alloc_file): Renamed from file_list_alloc.
+ * duff.h dufffile.c (file_list_empty): Renamed from empty_file_list.
+ * duff.h dufffile.c (free_entry_list): Renamed from file_list_free.
  * duffdriver.c dufffile.c duffutil.c: Put non-static functions on top.
  * duffdriver.c (process_clusters): Initialized cluster index.
  * duffdriver.c (report_cluster): Made use of get_field_terminator.
